--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [fork]
+name: Actions test
+run-name: ${{ github.actor }} testing stuff
+on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
